Базовый функционал
Добавлен endpoint -> DELETE /user
Удаляет категории пользователя, аккаунты пользователя и самого пользователя
